---------------------------------------------------------------------------------------------------
Version: 3.0.10
Date: ?
  Changes:
    - Removed all legacy low-res graphic files from pyanodon.
    - Removed hyphens from most item, fluid, entity, and recipe names in order to aid in itemsearch.
    - Improved sound effects for the hydrocyclone.
---------------------------------------------------------------------------------------------------
Version: 3.0.9
Date: 2025-1-2
  Changes:
    - Added FSM animations for the compressor.
---------------------------------------------------------------------------------------------------
Version: 3.0.8
Date: 2024-11-21
  Changes:
    - Renamed High Pressure Turbine to High-pressure turbine to match PyAE standard.
    - Updated Russian translation.
---------------------------------------------------------------------------------------------------
Version: 3.0.7
Date: 2024-11-14
  Changes:
    - Changed internal name of py-satellite back to satellite.
---------------------------------------------------------------------------------------------------
Version: 3.0.6
Date: 2024-11-9
  Changes:
    - Fixed fusion reactors accepting efficiency modules.
---------------------------------------------------------------------------------------------------
Version: 3.0.5
Date: 2024-11-7
  Changes:
    - Made most crafting machines flippable
    - Update to Uk locale
---------------------------------------------------------------------------------------------------
Version: 3.0.4
Date: 2024-10-30
  Changes:
    - Fixed the satellite recipe for really real this time.
    - Removed ash.
---------------------------------------------------------------------------------------------------
Version: 3.0.3
Date: 2024-10-29
  Changes:
    - Readded localised name for the satellite.
    - quantity is a quality all its own
---------------------------------------------------------------------------------------------------
Version: 3.0.2